--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
       </div>
     </div>
 
-     <section class="ftco-section ftco-no-pt bg-light">
+     <section class="ftco-section ftco-no-pt bg bg-light">
     	<div class="container">
     		<div class="row no-gutters">
     			<div class="col-md-12	featured-top">
