--- a/index.html
+++ b/index.html
@@ -25,12 +25,18 @@
     <link rel="stylesheet" href="css/flaticon.css">
     <link rel="stylesheet" href="css/icomoon.css">
     <link rel="stylesheet" href="css/style.css">
-  </head>
+
+    <link rel="icon" type="image/png" sizes="192x192"  href="vedant_logo.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="vedant_logo.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="vedant_logo.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="vedant_logo.png">
+    </head>
   <body>
     
 	  <nav class="navbar navbar-expand-lg navbar-dark ftco_navbar bg-dark ftco-navbar-light" id="ftco-navbar">
 	    <div class="container">
-	      <a class="navbar-brand" href="index.html">Car<span>Book</span></a>
+	      <!-- <a class="navbar-brand" href="index.html">Car<span>Book</span></a> -->
+         <a class="navbar-brand" href="index.html"><img src="vedant_logo_background.png" alt="" height="50px" width="150px"></a>
 	      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#ftco-nav" aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
 	        <span class="oi oi-menu"></span> Menu
 	      </button>
