--- a/car.html
+++ b/car.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Carbook - Free Bootstrap 4 Template by Colorlib</title>
+    <title>Vedant Tours | Best Car</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     
@@ -299,7 +299,7 @@
 				  <div class="block-23 mb-3">
 					<ul>
 					  <li><span class="icon icon-map-marker"></span><span class="text">Sector No 14, Goverdhan Villas, Udaipur-Rajasthan - 313001 (Near Rajasthan Hospital), India</span></li>
-					  <li><a hhref="tel:7947118833"><span class="icon icon-phone"></span><span class="text">+91 7947118833</span></a></li>
+					  <li><a hhref="tel:90010 06973"><span class="icon icon-phone"></span><span class="text">+91 90010 06973</span></a></li>
 					  <li><a href="#"><span class="icon icon-envelope"></span><span class="text">help@vedanttours.com</span></a></li>                
 					</ul>
 				  </div>
