--- a/pricing.html
+++ b/pricing.html
@@ -31,14 +31,14 @@
 	  <nav class="navbar navbar-expand-lg navbar-dark ftco_navbar bg-dark ftco-navbar-light" id="ftco-navbar">
 	    <div class="container">
 	      <!-- <a class="navbar-brand" href="index.html">Car<span>Book</span></a> -->
-		  <a class="navbar-brand" href="index.html"><img src="vedant_logo_background.png" alt="" height="50px" width="150px"></a>
+		  <a class="navbar-brand" href="/"><img src="vedant_logo_background.png" alt="" height="50px" width="150px"></a>
 	      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#ftco-nav" aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
 	        <span class="oi oi-menu"></span> Menu
 	      </button>
 
 	      <div class="collapse navbar-collapse" id="ftco-nav">
 	        <ul class="navbar-nav ml-auto">
-	          <li class="nav-item"><a href="index.html" class="nav-link">Home</a></li>
+	          <li class="nav-item"><a href="/" class="nav-link">Home</a></li>
 	          <li class="nav-item"><a href="about.html" class="nav-link">About</a></li>
 	          <li class="nav-item"><a href="services.html" class="nav-link">Services</a></li>
 	          <li class="nav-item active"><a href="pricing.html" class="nav-link">Pricing</a></li>
@@ -56,7 +56,7 @@
       <div class="container">
         <div class="row no-gutters slider-text js-fullheight align-items-end justify-content-start">
           <div class="col-md-9 ftco-animate pb-5">
-          	<p class="breadcrumbs"><span class="mr-2"><a href="index.html">Home <i class="ion-ios-arrow-forward"></i></a></span> <span>Pricing <i class="ion-ios-arrow-forward"></i></span></p>
+          	<p class="breadcrumbs"><span class="mr-2"><a href="/">Home <i class="ion-ios-arrow-forward"></i></a></span> <span>Pricing <i class="ion-ios-arrow-forward"></i></span></p>
             <h1 class="mb-3 bread">Pricing</h1>
           </div>
         </div>
@@ -395,8 +395,8 @@
 				  <div class="ftco-footer-widget mb-4 ml-md-5">
 					<h2 class="ftco-heading-2">Information</h2>
 					<ul class="list-unstyled">
-					  <li><a href="#" class="py-2 d-block">About</a></li>
-					  <li><a href="#" class="py-2 d-block">Services</a></li>
+					  <li><a href="about.html" class="py-2 d-block">About</a></li>
+					  <li><a href="services.html" class="py-2 d-block">Services</a></li>
 					  <li><a href="#" class="py-2 d-block">Term and Conditions</a></li>
 					  <!-- <li><a href="#" class="py-2 d-block">Privacy &amp; Cookies Policy</a></li> -->
 					</ul>
@@ -408,7 +408,7 @@
 					<ul class="list-unstyled">
 					  <li><a href="#" class="py-2 d-block">FAQ</a></li>
 					  <li><a href="#" class="py-2 d-block">How it works</a></li>
-					  <li><a href="#" class="py-2 d-block">Contact Us</a></li>
+					  <li><a href="contact.html" class="py-2 d-block">Contact Us</a></li>
 					</ul>
 				  </div>
 				</div>
@@ -417,9 +417,9 @@
 					  <h2 class="ftco-heading-2">Have a Questions?</h2>
 					  <div class="block-23 mb-3">
 						<ul>
-						  <li><span class="icon icon-map-marker"></span><span class="text">Sector No 14, Goverdhan Villas, Udaipur-Rajasthan - 313001 (Near Rajasthan Hospital), India</span></li>
-						  <li><a hhref="tel:90010 06973"><span class="icon icon-phone"></span><span class="text">+91 90010 06973</span></a></li>
-						  <li><a href="#"><span class="icon icon-envelope"></span><span class="text">help@vedanttours.com</span></a></li>                
+						  <li><span class="icon icon-map-marker"></span><span class="text">D 101, Dwarikapuri, Sector No 14 (Behind Rajasthan Hospital) Udaipur Rajasthan 313002, India</span></li>
+						  <li><a href="tel:9001006973"><span class="icon icon-phone"></span><span class="text">+91 9001006973</span></a></li>
+						  <li><a href="mailto:help@vedanttours.com"><span class="icon icon-envelope"></span><span class="text">help@vedanttours.com</span></a></li>                
 						</ul>
 					  </div>
 				  </div>
@@ -427,10 +427,9 @@
 			  </div>
 			  <div class="row">
 				<div class="col-md-12 text-center">
-	  
-				  <p><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-		Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This website is made with <i class="icon-heart color-danger" aria-hidden="true"></i> by <a href="https://iframeit.in" target="_blank"><b>iframeit</b></a>
-		<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></p>
+				<p>
+					Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This website is made with <i class="icon-heart text-danger" aria-hidden="true"></i> by <a href="https://iframeit.in" target="_blank"><b>iFrameit</b></a>
+				</p>
 				</div>
 			  </div>
 			</div>
@@ -456,8 +455,6 @@
   <script src="js/bootstrap-datepicker.js"></script>
   <script src="js/jquery.timepicker.min.js"></script>
   <script src="js/scrollax.min.js"></script>
-  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBVWaKrjvy3MaE7SQ74_uJiULgl1JY0H2s&sensor=false"></script>
-  <script src="js/google-map.js"></script>
   <script src="js/main.js"></script>
     
   </body>
