--- a/pricing.html
+++ b/pricing.html
@@ -25,6 +25,11 @@
     <link rel="stylesheet" href="css/flaticon.css">
     <link rel="stylesheet" href="css/icomoon.css">
     <link rel="stylesheet" href="css/style.css">
+
+	<link rel="icon" type="image/png" sizes="192x192" href="vedant_logo.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="vedant_logo.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="vedant_logo.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="vedant_logo.png">
   </head>
   <body>
     
