--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     
     <link href="https://fonts.googleapis.com/css?family=Poppins:200,300,400,500,600,700,800&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
 
     <link rel="stylesheet" href="css/open-iconic-bootstrap.min.css">
     <link rel="stylesheet" href="css/animate.css">
@@ -238,27 +239,30 @@
         </div>
 				<div class="row">
 					<div class="col-md-3">
-						<div class="services services-2 w-100 text-center">
-            	<div class="icon d-flex align-items-center justify-content-center"><span class="flaticon-wedding-car"></span></div>
-            	<div class="text w-100">
-                <h3 class="heading mb-2">Wedding Ceremony</h3>
-                <p>"Make your wedding day unforgettable with our luxury car service—arrive in elegance, style, and absolute comfort on your special day!" 🚗💍</p>
+            <div class="services services-2 w-100 text-center">
+              <div class="icon d-flex align-items-center justify-content-center">
+                <span class="fas fa-globe"></span>
+              </div>
+              <div class="text w-100">
+                <h3 class="heading mb-2">All India Tours</h3>
+                <p>"Explore India's rich heritage, vibrant cities, and stunning landscapes with our expertly curated tours!" 🇮🇳🚆</p>
               </div>
             </div>
-					</div>
-					<div class="col-md-3">
-						<div class="services services-2 w-100 text-center">
-            	<div class="icon d-flex align-items-center justify-content-center"><span class="flaticon-transportation"></span></div>
-            	<div class="text w-100">
-                <h3 class="heading mb-2">City Transfer</h3>
-                <p>
-                  "Seamless city transfers with comfort and reliability—ride with ease, arrive on time, and travel stress-free to your destination!" 🚖</p>
+          </div>
+          <div class="col-md-3">
+            <div class="services services-2 w-100 text-center">
+              <div class="icon d-flex align-items-center justify-content-center">
+                <span class="fas fa-hotel"></span>
+              </div>
+              <div class="text w-100">
+                <h3 class="heading mb-2">Hotel Booking</h3>
+                <p>"Book the finest hotels at unbeatable prices—luxury, comfort, and relaxation just a click away!" 🏨✨</p>
               </div>
             </div>
-					</div>
-					<div class="col-md-3">
+          </div>
+          <div class="col-md-3">
 						<div class="services services-2 w-100 text-center">
-            	<div class="icon d-flex align-items-center justify-content-center"><span class="flaticon-car"></span></div>
+            	<div class="icon d-flex align-items-center justify-content-center"><span class="fas fa-plane"></span></div>
             	<div class="text w-100">
                 <h3 class="heading mb-2">Airport Transfer</h3>
                 <p>"Reliable airport transfer for a smooth journey—on time, hassle-free, and comfortable ride to or from the airport!" ✈️🚗</p>
@@ -267,13 +271,12 @@
 					</div>
 					<div class="col-md-3">
 						<div class="services services-2 w-100 text-center">
-            	<div class="icon d-flex align-items-center justify-content-center"><span class="flaticon-transportation"></span></div>
+            	<div class="icon d-flex align-items-center justify-content-center"><span class="fas fa-city"></span></div>
             	<div class="text w-100">
                 <h3 class="heading mb-2">Whole City Tour</h3>
                 <p>"Explore the heart of the city with our guided tours—comfort, convenience, and unforgettable sights all in one ride!" 🚗🏙️</p>
               </div>
             </div>
-					</div>
 				</div>
 			</div>
 		</section>
