--- a/about.html
+++ b/about.html
@@ -90,8 +90,8 @@
       <div class="container">
           <div class="row no-gutters">
               <!-- Image Card Section -->
-              <div class="col-md-6 p-md-5 d-flex justify-content-center align-items-center">
-                  <div class="card text-center" style="width: 100%; border: none;">
+              <div class="col-md-6 p-md-5 d-flex justify-content-center align-items-center" >
+                  <div class="card text-center" style="width: 100%; border: none; padding: 50px 50px 0px 50px;">
                       <img src="images/owner-img.jpeg" class="card-img-top" alt="Luxury Car Rental">
                       <div class="card-body">
                           <h5 class="card-title text-primary">Monu Choudhary</h5>
