chnages in all pages

--- a/contact.html
+++ b/contact.html
@@ -4,6 +4,10 @@
     <title>Vedant Tours | Contact</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="description" content="Book car rentals, hotels, and tourism packages across India. Get the best deals on travel and explore top destinations hassle-free.">
+    <meta name="keywords" content="car rental India, car rental rajasthan, car rental udaipur, hotel booking India, tourism packages, travel deals, India tour, car hire, best hotels, holiday packages">
+    <meta name="author" content="Vedant Tours">
+    <meta name="robots" content="index, follow">
     
     <link href="https://fonts.googleapis.com/css?family=Poppins:200,300,400,500,600,700,800&display=swap" rel="stylesheet">
 
@@ -114,7 +118,7 @@
                 <textarea name="" id="" cols="30" rows="7" class="form-control" placeholder="Message"></textarea>
               </div>
               <div class="form-group">
-                <input type="submit" value="Send Message" class="btn btn-primary py-3 px-5">
+                <input type="submit" value="Send Message" class="btn btn-primary py-3 px-5" style="margin-left: -.5rem;">
               </div>
             </form>
           
