--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <title>Vedant Tours - A Car Service Platform.</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="description" content="Book car rentals, hotels, and tourism packages across India. Get the best deals on travel and explore top destinations hassle-free.">
+    <meta name="keywords" content="car rental India, car rental rajasthan, car rental udaipur, hotel booking India, tourism packages, travel deals, India tour, car hire, best hotels, holiday packages">
+    <meta name="author" content="Vedant Tours">
+    <meta name="robots" content="index, follow">
     
     <link href="https://fonts.googleapis.com/css?family=Poppins:200,300,400,500,600,700,800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
@@ -147,7 +151,7 @@
 					            </div>      
 					          </div>
 					        </div>
-					        <p style="margin-left: 1.3rem;"><a href="https://wa.me/919001006973?text=Hello Vedant Tours, I want to book a car." target="_blank" class="btn btn-primary py-3 px-4">Reserve Your Perfect Car</a></p>
+					        <p style="margin-left: 1.7rem;"><a href="https://wa.me/919001006973?text=Hello Vedant Tours, I want to book a car." target="_blank" class="btn btn-primary py-3 px-4">Reserve Your Perfect Car</a></p>
 	  						</div>
 	  					</div>
 	  				</div>
