--- a/services.html
+++ b/services.html
@@ -4,6 +4,10 @@
     <title>Vedant Tours | Best Service</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="description" content="Book car rentals, hotels, and tourism packages across India. Get the best deals on travel and explore top destinations hassle-free.">
+    <meta name="keywords" content="car rental India, car rental rajasthan, car rental udaipur, hotel booking India, tourism packages, travel deals, India tour, car hire, best hotels, holiday packages">
+    <meta name="author" content="Vedant Tours">
+    <meta name="robots" content="index, follow">
     
     <link href="https://fonts.googleapis.com/css?family=Poppins:200,300,400,500,600,700,800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
