added "alt="whats-img"" in al pages

--- a/index.html
+++ b/index.html
@@ -419,7 +419,7 @@
 <a href="https://wa.me/+919001006973?text=Hello, I need assistance!" target="_blank" 
    style="position: fixed; bottom: 20px; right: 20px; z-index: 1000;">
     <img src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg" 
-         width="60" height="60">
+         width="60" height="60" alt="whats-img">
 </a>
 
   <!-- loader -->
