--- a/about.html
+++ b/about.html
@@ -133,7 +133,7 @@
 		</section> -->
 
 
-    <section class="ftco-section testimony-section bg-light">
+   <!-- <section class="ftco-section testimony-section bg-light">
       <div class="container">
         <div class="row justify-content-center mb-5">
           <div class="col-md-7 text-center heading-section ftco-animate">
@@ -203,7 +203,7 @@
           </div>
         </div>
       </div>
-    </section>
+    </section>-->
 
     <!-- <section class="ftco-counter ftco-section img" id="section-counter">
 			<div class="overlay"></div>
