Update contact email to choudharymonu6630@gmail.com across multiple files

--- a/car-single.html
+++ b/car-single.html
@@ -460,7 +460,7 @@
 					<ul>
 					  <li><span class="icon icon-map-marker"></span><span class="text">D 101, Dwarikapuri, Sector No 14 (Behind Rajasthan Hospital) Udaipur Rajasthan 313002, India</span></li>
 					  <li><a href="tel:9001006973"><span class="icon icon-phone"></span><span class="text">+91 9001006973</span></a></li>
-					  <li><a href="mailto:help@vedanttours.com"><span class="icon icon-envelope"></span><span class="text">help@vedanttours.com</span></a></li>                
+					  <li><a href="mailto:choudharymonu6630@gmail.com"><span class="icon icon-envelope"></span><span class="text">choudharymonu6630@gmail.com</span></a></li>                
 					</ul>
 				  </div>
 			  </div>
